// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateDocumentTypes() #0 1`] = `
"export class Doc extends $$basil.Base {
    constructor(params?: Partial<Doc>) {
        super();
        Object.assign(this, params);
    }
    _id: $$mongodb.ObjectId = new $$mongodb.ObjectId();
    createdAt: Date = new Date();
    flag: boolean = false;
    status: "created" | "deleted" = "created";
    name: string = "";
    sub: {
        "name": string;
    } = {
        "name": "",
    };
    record: Record<string, string> = {};
}
"
`;

exports[`generateDocumentTypes() #1 1`] = `
"export class Doc extends $$basil.Base {
    constructor(params?: Partial<Doc>) {
        super();
        Object.assign(this, params);
    }
    _id: $$mongodb.ObjectId = new $$mongodb.ObjectId();
    userId: $$mongodb.ObjectId = new $$mongodb.ObjectId();
}
export class User extends $$basil.Base {
    constructor(params?: Partial<User>) {
        super();
        Object.assign(this, params);
    }
    _id: $$mongodb.ObjectId = new $$mongodb.ObjectId();
}
"
`;

exports[`generateDocumentTypes() #2 1`] = `
"export class Doc extends $$basil.Base {
    constructor(params?: Partial<Doc>) {
        super();
        Object.assign(this, params);
    }
    _id: $$mongodb.ObjectId = new $$mongodb.ObjectId();
    userId: $$mongodb.ObjectId = new $$mongodb.ObjectId();
}
export class User extends $$basil.Base {
    constructor(params?: Partial<User>) {
        super();
        Object.assign(this, params);
    }
    _id: $$mongodb.ObjectId = new $$mongodb.ObjectId();
}
"
`;

exports[`generateDocumentTypes() #3 1`] = `
"export class Doc extends $$basil.Base {
    constructor(params?: Partial<Doc>) {
        super();
        Object.assign(this, params);
    }
    _id: $$mongodb.ObjectId = new $$mongodb.ObjectId();
    userId: $$mongodb.ObjectId = new $$mongodb.ObjectId();
    status?: null | "created" | "deleted";
}
"
`;
